# dsd-vps-kamal

./: .gitignore  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: integration_tests.yaml  lint.yaml  publish.yml  stale.yml  tests.yaml  unit_tests.yaml
dsd_vps_kamal/: __init__.py  cli.py  deploy.py  deploy_messages.py  platform_deployer.py  plugin_config.py
dsd_vps_kamal/templates/: deploy.yml  dockerfile  dockerignore  kamal_secrets  settings.py  start-web.sh
tests/: conftest.py
tests/e2e_tests/: test_deployment.py  utils.py
tests/integration_tests/: test_cli.py  test_custom_cli_arg.py  test_deployed_project_name_arg.py  test_help_output.py  test_host_arg.py  test_ip_address_arg.py  test_vpskamal_config.py  test_vpskamal_config_sqlite.py
tests/integration_tests/reference_files/: .gitignore  Dockerfile  Pipfile  Pipfile_sqlite  deploy.yml  deploy_sqlite.yml  plugin_help_text_sample.txt  pyproject.toml  pyproject_sqlite.toml  requirements.txt  requirements_sqlite.txt  settings.py  settings_sqlite.py  start-web.sh
tests/unit_tests/: test_platform_deployer.py
