[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsd-vps-kamal"
version = "0.1.0"
description = "A Django Simple Deploy plugin for deploying Django projects to any VPS provider using Kamal."
readme = "README.md"

authors = [
    {name = "Jan Raasch", email = "jan@janraasch.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

keywords = ["django", "deployment", "vps", "kamal"]

requires-python = ">=3.9"

dependencies = [
    "django>=4.2",
    "pluggy>=1.5.0",
    "toml>=0.10.2",
    "requests>=2.32.2",
    "django-simple-deploy>=0.9.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "build>=1.2.1",
    "pytest>=8.3.0",
    "pytest-mock>=3.15.0",
    "twine>=5.1.1",
]

# [project.urls]
# "Documentation" = "<documentation URL>"
# "GitHub" = "<GH repo URL>"
# "Changelog" = "<changelog URL"

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]
addopts = "--verbose"

[tool.setuptools]
packages = [
    "dsd_vps_kamal",
    "dsd_vps_kamal.templates",
]
include-package-data = true
